# tgfs

./: .gitignore  fsb.env.example  pyproject.toml  requirements.txt
.github/workflows/: build.yml
WebStreamer/: __main__.py  vars.py
WebStreamer/bot/: clients.py
WebStreamer/bot/plugins/: start.py  stream.py
WebStreamer/server/: stream_routes.py
WebStreamer/utils/: custom_dl.py  file_properties.py  keepalive.py
internal/commands/: start.go
